Make streamed and held receipts durable and fail closed